<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="E_AirHandlingUnitControlMode" Id="{5ced3a76-a9ad-457e-8afd-db5b43bb6dcf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AirHandlingUnitControlMode :
(
	On := 0, //100% on
	Discrete := 1, //use hysteresis controller
	Continous := 2 //use PI-Controller
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>